# wordle

./: .gitignore  Dockerfile  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
tests/: __init__.py
