[tool.isort]
profile = "black"

[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Fred Drake <fred.drake@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
loguru = "^0.6.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
cohesion = "1.0.0"
dlint = "0.12.0"
flake8-class-attributes-order = "0.1.2"
flake8-coding = "1.3.2"
flake8-pytest-style = "1.6.0"
flake8-pytest = "1.3"
wemake-python-styleguide = "0.16.0"
mypy = "0.931"
autopep8 = "1.6.0"
flake8 = "4.0.1"
ipykernel = "^6.9.0"
types-PyYAML = "^6.0.4"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
rope = "^0.22.0"
flake8-mutable = "1.2.0"
flake8-builtins = "1.5.3"
black = "^22.1.0"
poethepoet = "^0.12.2"

[tool.poe.tasks]
test = { "shell" = """
echo 'Linting dockerfile...' && 
hadolint Dockerfile && 
echo 'Linting markdown files...' && 
mdl . && 
echo 'Running flake8 linter on src/...' && 
flake8 src/ && 
echo 'Running mypy type checker on src/...' && 
mypy src/ && 
echo 'Running test cases and measuring code coverage...' && 
pytest -q --cov
""" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
